--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node Backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend --include=dev && npm run build --prefix frontend"
   },
   "author": "Ankita G.",
   "license": "ISC",
